# agentic_investment_advisor

./: .env.example  .gitignore  Dockerfile  README.docker.md  README.md  docker-compose.yml  pyproject.toml
src/agentic_investment_advisor/: crew.py  llms.py  main.py  models.py
src/agentic_investment_advisor/config/: agents.yaml  params.yaml  tasks.yaml
src/agentic_investment_advisor/tools/: calculator.py  custom_tool.py
