[project]
name = "agentic_investment_advisor"
version = "0.1.0"
description = "agentic_investment_advisor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.1",
    "litellm>=1.79.0",
    "portkey-ai>=2.0.2",
    "python-dotenv>=1.2.1",
]

[project.scripts]
agentic_investment_advisor = "agentic_investment_advisor.main:run"
run_crew = "agentic_investment_advisor.main:run"
train = "agentic_investment_advisor.main:train"
replay = "agentic_investment_advisor.main:replay"
test = "agentic_investment_advisor.main:test"
run_with_trigger = "agentic_investment_advisor.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pip>=25.3",
]
